<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:src="@mipmap/ic_launcher"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/tilUsername"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      app:errorEnabled="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.4"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/tilPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      app:errorEnabled="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.4"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tilUsername"
      app:passwordToggleEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:singleLine="true" />
  </android.support.design.widget.TextInputLayout>

  <vn.tiki.android.androidtesting.ui.widget.ProgressButton
      android:id="@+id/btSubmit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:enabled="false"
      android:text="@string/login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

</android.support.constraint.ConstraintLayout>
